--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -44,7 +44,7 @@
   </main>
   <footer>
     <div class="container">
-     <p>Copyright &copy; 2020 - ur<span>Meal</span></p>
+     <p>Copyright&copy; 2020 - UrMeal</p>
     </div>
   </footer>
 </body>
