font load asyncronously

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -10,8 +10,12 @@
   <link rel="icon" href="icons/48.png">
   <link rel="apple-touch-icon" href="/icons/192.png">
   <link rel="manifest" href="manifest.json">
-  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet" crossorigin="anonymous">
-  <script src="https://kit.fontawesome.com/733e64d894.js" crossorigin="anonymous"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Noto+Sans&display=swap"
+        rel="stylesheet" media="print" onload="this.media='all'">
+  <script src="https://kit.fontawesome.com/733e64d894.js"
+        crossorigin="anonymous" defer></script>
   <title>Ur meal</title>
 </head>
 <body>
