--- a/src/styles/_jumbotron.scss
+++ b/src/styles/_jumbotron.scss
@@ -1,34 +1,20 @@
 .jumbotron {
-  background-image: url('../public/images/hero-image_4.jpg');
-  background-size: cover;
-  background-position: center;
+  overflow:hidden;
   width: 100%;
   height: 40vh;
   position: relative;
   margin-top: 1rem;
   margin-bottom: 2rem;
 
-  &::before {
-    content: '';
-    position: absolute;
-    bottom: -1rem;
-    width: 100%;
-    height: 1rem;
-    display: block;
-    background-color: $red;
-    z-index: -1;
-  }
-
   &__text {
     position: absolute;
     font-size: 1rem;
-    right: 1rem;
-    bottom: 1rem;
+    bottom: 1.24rem;
+    right: 1.24rem;
     background-color: $mask;
     padding-inline: 1rem;
     em {
       color: $red;
-      text-emphasis-style:to-upper-case($string: "")
     }
   }
 }
