--- a/src/styles/_reviews.scss
+++ b/src/styles/_reviews.scss
@@ -3,7 +3,7 @@ review-list {
     @include respond(medium-screen) {
         grid-template-columns: repeat(2, 1fr);
     }
-    
+
     @include respond(large-screen) {
         grid-template-columns: repeat(3, 1fr);
     }
@@ -11,8 +11,15 @@ review-list {
     .review-card {
         margin: 0.4rem;
         padding: 1rem;
-        border-radius: 0.8rem;
-        border: 2px solid $black;
+        border-radius: 0.4rem;
+        border: 1.2px solid $black;
         background-color: $mask;
+
+        &__title {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            margin-bottom: 1rem;
+        }
     }
 }
