--- a/src/styles/_menu-list.scss
+++ b/src/styles/_menu-list.scss
@@ -1,17 +1,26 @@
 menu-list {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 2rem;
+  @include respond(medium-screen) {
+    grid-template-columns: repeat(3, 1fr);
+  }
 
-    @include respond(medium-screen) {
-        grid-template-columns: repeat(3, 1fr);
+  @include respond(large-screen) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  ul {
+    list-style-type: circle;
+    margin-left: 1.4rem;
+
+    li {
+      line-height: 2;
+      padding-left: 0.8rem;
     }
 
-    @include respond(large-screen) {
-        grid-template-columns: repeat(4, 1fr);
+    li:nth-child(even) {
+      background-color: $mask;
     }
-
-    ul {
-        list-style-type: circle;
-        margin-left: 1.4rem;
-    }
+  }
 }
