--- a/src/styles/_restaurant-detail.scss
+++ b/src/styles/_restaurant-detail.scss
@@ -1,6 +1,16 @@
 .restaurant-detail {
   margin-top: 1.6rem;
 
+  &__img {
+    height: 20rem;
+    @include respond(small-screen) {
+      height: 22rem
+    }
+    @include respond(large-screen) {
+      height: 24rem
+    }
+  }
+
   &__rating {
     position: absolute;
     color: $white;
@@ -8,9 +18,17 @@
     padding: 0.6rem;
     font-size: 2.4rem;
     z-index: 99;
+    font-weight: 600;
+  }
+
+  &__info {
+    padding: 1rem;
   }
 
   &__description {
-    padding: 1rem;
+    background-color: $mask;
+    padding: 1.4rem;
+    line-height: 1.5;
+    border-radius: 0.4rem;
   }
 }
